open api /request/procure & tidy up response error
