# delivery/controller/request/request.go
@@ -152,7 +152,7 @@ func (rc RequestController) Procure() echo.HandlerFunc {
 	return func(c echo.Context) error {
 		role := _midware.ExtractRole(c)
 		if role != "Administrator" {
-			return c.JSON(http.StatusBadRequest, _common.NoDataResponse(http.StatusBadRequest, "Only Admin Can Create Request"))
+			return c.JSON(http.StatusForbidden, _common.NoDataResponse(http.StatusForbidden, "Only Admin Can Create Request"))
 		}
 		idLogin := _midware.ExtractId(c)
 		newReq := _entity.CreateProcure{}
@@ -162,17 +162,14 @@ func (rc RequestController) Procure() echo.HandlerFunc {
 		}
 
 		reqData := _entity.Procure{}
-		reqData.User.Id = idLogin
-
 		// check category id
 		categoryId, err := rc.repository.GetCategoryId(newReq.Category)
 		if categoryId == 0 {
 			return c.JSON(http.StatusBadRequest, _common.NoDataResponse(http.StatusBadRequest, "Category Not Found"))
 		}
 		if err != nil {
-			return c.JSON(http.StatusBadRequest, _common.NoDataResponse(http.StatusBadRequest, "Failed to Get Category Id"))
+			return c.JSON(http.StatusInternalServerError, _common.NoDataResponse(http.StatusInternalServerError, "Failed to Get Category Id"))
 		}
-		reqData.Category = categoryId
 
 		// detect image upload
 		src, file, err := c.Request().FormFile("image")
@@ -183,25 +180,27 @@ func (rc RequestController) Procure() echo.HandlerFunc {
 			defer src.Close()
 
 			// upload avatar to amazon s3
-			image, code, err := _helper.UploadImage("procure", reqData.User.Id, file, src)
+			image, code, err := _helper.UploadImage("procure", idLogin, file, src)
 
 			// detect failure while uploading avatar
 			if err != nil {
 				return c.JSON(code, _common.NoDataResponse(code, err.Error()))
 			}
 
-			reqData.Image = image
+			newReq.Image = image
 		case http.ErrMissingFile:
-			image := reqData.Image[strings.LastIndex(reqData.Image, "/")+1:]
-			reqData.Image = image
+			image := newReq.Image[strings.LastIndex(newReq.Image, "/")+1:]
+			newReq.Image = image
 		case http.ErrNotMultipart:
-			image := reqData.Image[strings.LastIndex(reqData.Image, "/")+1:]
-			reqData.Image = image
+			image := newReq.Image[strings.LastIndex(newReq.Image, "/")+1:]
+			newReq.Image = image
 		default:
 			log.Println(err)
 			return c.JSON(http.StatusBadRequest, _common.NoDataResponse(http.StatusBadRequest, "Failed to Upload Image"))
 		}
-
+		reqData.User.Id = idLogin
+		reqData.Category = categoryId
+		reqData.Image = fmt.Sprintf("https://capstone-group3.s3.ap-southeast-1.amazonaws.com/%s", newReq.Image)
 		reqData.Activity = newReq.Activity
 		reqData.RequestTime = time.Now()
 		reqData.Status = "Waiting Approval from Manager"
@@ -210,7 +209,7 @@ func (rc RequestController) Procure() echo.HandlerFunc {
 
 		_, err = rc.repository.Procure(reqData)
 		if err != nil {
-			fmt.Println(err)
+			log.Println(err)
 			return c.JSON(http.StatusBadRequest, _common.NoDataResponse(http.StatusBadRequest, "Failed Create Request"))
 		}
 
